Thu Jul 28 12:32:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cptr.c (rb_dlptr_aref, rb_dlptr_aset): check NULL pointer
	  dereference.

	* ext/dl/cptr.c (rb_dlptr_s_to_ptr): use rb_check_funcall.

	* ext/dl/cptr.c (rb_dlptr_s_to_ptr): fix wrapping condition.

	* ext/dl/cptr.c (rb_dlptr_s_to_ptr): fix wrapping condition.

Thu Jul 28 04:53:31 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/delegate.rb:  Move file-level documentation to the appropriate
	  classes.

Thu Jul 28 02:15:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (dlcfunc_mark), ext/dl/cptr.c (dlptr_mark):
	  workaround to mark wrapped object.  this is not a true fix,
	  because [Bug #4929] is caused by the interface design of DL.

Thu Jul 28 00:28:15 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/fileutils/test_fileutils.rb: add OpenBSD case.
	  patched by Jeremy Evans [ruby-core:38530] see #5097

	* test/ruby/test_process.rb: ditto.

Wed Jul 27 22:46:59 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/rinda/test_rinda.rb (test_remote_array_and_hash):
	  add local variables to protect objects from GC. [ruby-dev:44253]
	  [Bug #5104]

Wed Jul 27 17:55:54 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/missing.h: define __syscall if the platform has
	  __syscall in the library but doesn't define it in headers
	  for example Mac OS X.

Wed Jul 27 15:39:14 2011  Eric Hodel  <drbrain@segment7.net>

	* object.c:  Add usage documentation for BasicObject.  Based on patch
	  by Thomas Sawyer.  [Ruby 1.9 - Bug #5067]

Wed Jul 27 12:24:17 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb:  Add missing require and update
	  messaging to avoid confusion with uninstall --format-executable.
	  [Ruby 1.9 - Bug #4062]

Wed Jul 27 09:34:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.6.1.

Wed Jul 27 09:27:59 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>
